2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_create_edit_button, hd_home_constructed,
	  hd_home_show_edit_button): 
	* src/mb/hd-theme.h: Replace the edit button with a themed version
	  without any text. Fixes: NB#90289, NB#101918

	* debian/changelog: Update.

2009-02-18  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/a11y/launcher/hda-launcher-grid.c: simplified after CAIL changes
	
2009-02-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-render-manager.c: Don't add HD buttons to the input
        list if they're not reactive.  In other words, clicking an HD
        button while a system modal dialogue is up will close the dialogue.
        MB#100934.
	
2009-02-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Implement full stackable window handling.

	* src/util/hd-transition.c (hd_transition_close_app): Check that the
	secondary window is not a temporary leader.
	* src/mb/hd-theme.c (construct_buttons): Handle the case that the
	window is a secondary acting as leader.
	* src/mb/hd-app.c (hd_app_destroy): Remove content from this function.
	It is now done at the unmapping handler.
	(hd_app_init): Move stackable-related code to MapNotify handler
	because mapping time is what counts, not creation.
	* (hd_app_close_followers): Remove g_return_val_if_fail checks and
	replace the while loop with a for loop.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client): Code to handle
	tricky cases, like unmapping of windows from middle of the stackable
	window stack. Make sure task navigator has the right actor in all
	cases.
	(hd_comp_mgr_handle_stackable): New function, containing code from
	hd_app_init and some more to aid in the task of keeping the actor in
	task navigator up-to-date.
	(hd_comp_mgr_map_notify): Changes to keep task navigator up-to-date
	with the stackable window stack.
	(hd_comp_mgr_effect): Handle the case of secondary window acting as
	the leader.